--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-font-loader": "^1.1.0",
     "react-icons": "^4.10.1",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.0.5",
