--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
@@ -27,7 +26,6 @@
     "react-icons": "^4.10.1",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.1",
     "redux": "^4.2.1",
@@ -60,6 +58,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
+    "@testing-library/user-event": "^13.5.0",
+    "jest-fetch-mock": "^3.0.3",
+    "react-router-dom": "^6.14.1",
     "sass": "^1.62.1"
   }
 }
