--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "webpack": "^5.88.1",
@@ -46,7 +48,6 @@
       "react-app/jest"
     ]
   },
-  
   "browserslist": {
     "production": [
       ">0.2%",
