--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.1",
     "@types/react-redux": "^7.1.25",
     "@types/redux": "^3.6.0",
+    "@types/youtube": "0.0.47",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
