--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/redux": "^3.6.0",
     "@types/youtube": "0.0.47",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-font-loader": "^1.1.0",
