--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 node_modules
 /.pnp
 .pnp.js
+build
+
 
 # testing
 /coverage
@@ -16,7 +18,8 @@ node_modules
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local
+.env.production.
+
 
 npm-debug.log*
 yarn-debug.log*
